# cardman

./: .gitignore  cardman.nimble  main.py  pyproject.toml  sample.card  wip.card
cards/: rat.yaml  wan.card
src/: cardman.nim
src/cardman/: __init__.py  controller.py  model.py  view.py
