[tool.poetry]
name = "cardman"
version = "0.1.0"
description = ""
authors = ["Bùi Thành Nhân <hi@imnhan.com>"]
license = "MIT"
packages = [
    { include = "cardman", from = "src" },
]

[tool.poetry.scripts]
cardman = "cardman:main"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
python-language-server = "^0.31.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
